// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuotationIdParamDto invalid response for id not a allowed value 1 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "matches": "id must match /^[0-9]{12}$/ regular expression",
    },
    "property": "id",
    "value": "1",
  },
]
`;

exports[`QuotationIdParamDto invalid response for missing id 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isString": "id must be a string",
      "matches": "id must match /^[0-9]{12}$/ regular expression",
    },
    "property": "id",
    "value": undefined,
  },
]
`;
